@@ -1,9 +1,11 @@
 #!/usr/bin/env bash
 
-export MAVEN_OPTS="$MAVEN_OPTS -XX:MaxPermSize=1024m -Xmx2048m"
-export JAVA_OPTS="$JAVA_OPTS -XX:MaxPermSize=1024m -Xmx2048m"
+set -e
+
+export MAVEN_OPTS="$MAVEN_OPTS -Xmx2048m"
+export JAVA_OPTS="$JAVA_OPTS -Xmx2048m"
 # -agentpath:/Applications/jprofiler8/bin/macos/libjprofilerti.jnilib=port=25000
-export JAVA_HOME=`/usr/libexec/java_home -v 1.7`
+export JAVA_HOME=`/usr/libexec/java_home -v 1.8`
 echo
 java -version
 echo
